Replace tabs with whitespace as per https://github.com/oyachai/HearthSim/issues/49