@@ -36,234 +36,234 @@ import com.hearthsim.util.tree.RandomEffectNode;
 
 public class TestShaman {
 
-	private final org.slf4j.Logger log = org.slf4j.LoggerFactory.getLogger(this.getClass());
+    private final org.slf4j.Logger log = org.slf4j.LoggerFactory.getLogger(this.getClass());
 
-	private HearthTreeNode board;
-	private Deck deck;
+    private HearthTreeNode board;
+    private Deck deck;
 
-	@Before
-	public void setup() throws HSException {
-		board = new HearthTreeNode(new BoardModel(new Shaman(), new TestHero()));
+    @Before
+    public void setup() throws HSException {
+        board = new HearthTreeNode(new BoardModel(new Shaman(), new TestHero()));
 
-		Minion minion0_0 = new BoulderfistOgre();
-		Minion minion0_1 = new RaidLeader();
-		Minion minion1_0 = new BoulderfistOgre();
-		Minion minion1_1 = new RaidLeader();
+        Minion minion0_0 = new BoulderfistOgre();
+        Minion minion0_1 = new RaidLeader();
+        Minion minion1_0 = new BoulderfistOgre();
+        Minion minion1_1 = new RaidLeader();
 
-		board.data_.placeCardHandCurrentPlayer(minion0_0);
-		board.data_.placeCardHandCurrentPlayer(minion0_1);
+        board.data_.placeCardHandCurrentPlayer(minion0_0);
+        board.data_.placeCardHandCurrentPlayer(minion0_1);
 
-		board.data_.placeCardHandWaitingPlayer(minion1_0);
-		board.data_.placeCardHandWaitingPlayer(minion1_1);
+        board.data_.placeCardHandWaitingPlayer(minion1_0);
+        board.data_.placeCardHandWaitingPlayer(minion1_1);
 
-		Card cards[] = new Card[30];
-		for(int index = 0; index < 30; ++index) {
-			cards[index] = new TheCoin();
-		}
+        Card cards[] = new Card[30];
+        for(int index = 0; index < 30; ++index) {
+            cards[index] = new TheCoin();
+        }
 
-		deck = new Deck(cards);
+        deck = new Deck(cards);
 
-		Card fb = new WildGrowth();
-		board.data_.placeCardHandCurrentPlayer(fb);
+        Card fb = new WildGrowth();
+        board.data_.placeCardHandCurrentPlayer(fb);
 
-		board.data_.getCurrentPlayer().setMana((byte)9);
-		board.data_.getWaitingPlayer().setMana((byte)9);
-		
-		board.data_.getCurrentPlayer().setMaxMana((byte)8);
-		board.data_.getWaitingPlayer().setMaxMana((byte)8);
-		
-		HearthTreeNode tmpBoard = new HearthTreeNode(board.data_.flipPlayers());
-		tmpBoard.data_.getCurrentPlayerCardHand(0).useOn(PlayerSide.CURRENT_PLAYER,
-				tmpBoard.data_.getCurrentPlayerHero(), tmpBoard, deck, null);
-		tmpBoard.data_.getCurrentPlayerCardHand(0).useOn(PlayerSide.CURRENT_PLAYER,
-				tmpBoard.data_.getCurrentPlayerHero(), tmpBoard, deck, null);
+        board.data_.getCurrentPlayer().setMana((byte)9);
+        board.data_.getWaitingPlayer().setMana((byte)9);
 
-		board = new HearthTreeNode(tmpBoard.data_.flipPlayers());
-		board.data_.getCurrentPlayerCardHand(0).useOn(PlayerSide.CURRENT_PLAYER, board.data_.getCurrentPlayerHero(),
-				board, deck, null);
-		board.data_.getCurrentPlayerCardHand(0).useOn(PlayerSide.CURRENT_PLAYER, board.data_.getCurrentPlayerHero(),
-				board, deck, null);
+        board.data_.getCurrentPlayer().setMaxMana((byte)8);
+        board.data_.getWaitingPlayer().setMaxMana((byte)8);
 
-		board.data_.resetMana();
-		board.data_.resetMinions();
+        HearthTreeNode tmpBoard = new HearthTreeNode(board.data_.flipPlayers());
+        tmpBoard.data_.getCurrentPlayerCardHand(0).useOn(PlayerSide.CURRENT_PLAYER,
+                tmpBoard.data_.getCurrentPlayerHero(), tmpBoard, deck, null);
+        tmpBoard.data_.getCurrentPlayerCardHand(0).useOn(PlayerSide.CURRENT_PLAYER,
+                tmpBoard.data_.getCurrentPlayerHero(), tmpBoard, deck, null);
 
-	}
+        board = new HearthTreeNode(tmpBoard.data_.flipPlayers());
+        board.data_.getCurrentPlayerCardHand(0).useOn(PlayerSide.CURRENT_PLAYER, board.data_.getCurrentPlayerHero(),
+                board, deck, null);
+        board.data_.getCurrentPlayerCardHand(0).useOn(PlayerSide.CURRENT_PLAYER, board.data_.getCurrentPlayerHero(),
+                board, deck, null);
 
-	@Test
-	public void testHeropowerNode() throws HSException {
-		Minion target = board.data_.getCharacter(PlayerSide.CURRENT_PLAYER, 0);
-		Hero hero = board.data_.getCurrentPlayerHero();
-		HearthTreeNode ret = hero.useHeroAbility(PlayerSide.CURRENT_PLAYER, target, board, deck, null);
-		assertNotEquals(board, ret);
-		assertTrue(ret instanceof RandomEffectNode);
-		assertEquals(ret.getChildren().size(), 4);
+        board.data_.resetMana();
+        board.data_.resetMinions();
 
-		assertEquals(PlayerSide.CURRENT_PLAYER.getPlayer(board).getNumMinions(), 2);
-		assertEquals(board.data_.getCurrentPlayer().getMana(), 8);
-	}
+    }
 
-	@Test
-	public void testTotemSearing() throws HSException {
-		Minion target = board.data_.getCharacter(PlayerSide.CURRENT_PLAYER, 0);
-		Hero hero = board.data_.getCurrentPlayerHero();
-		HearthTreeNode ret = hero.useHeroAbility(PlayerSide.CURRENT_PLAYER, target, board, deck, null);
+    @Test
+    public void testHeropowerNode() throws HSException {
+        Minion target = board.data_.getCharacter(PlayerSide.CURRENT_PLAYER, 0);
+        Hero hero = board.data_.getCurrentPlayerHero();
+        HearthTreeNode ret = hero.useHeroAbility(PlayerSide.CURRENT_PLAYER, target, board, deck, null);
+        assertNotEquals(board, ret);
+        assertTrue(ret instanceof RandomEffectNode);
+        assertEquals(ret.getChildren().size(), 4);
 
-		HearthTreeNode searingNode = ret.getChildren().get(0);
-		assertEquals(searingNode.data_.getCurrentPlayer().getNumMinions(), 3);
-		assertEquals(searingNode.data_.getCurrentPlayer().getMana(), 6);
-		assertTrue(searingNode.data_.getCurrentPlayer().getMinions().get(2) instanceof SearingTotem);
+        assertEquals(PlayerSide.CURRENT_PLAYER.getPlayer(board).getNumMinions(), 2);
+        assertEquals(board.data_.getCurrentPlayer().getMana(), 8);
+    }
 
-		assertEquals(searingNode.data_.getCurrentPlayer().getMinions().get(0).getTotalHealth(), 2);
-		assertEquals(searingNode.data_.getCurrentPlayer().getMinions().get(1).getTotalHealth(), 7);
-		assertEquals(searingNode.data_.getCurrentPlayer().getMinions().get(2).getTotalHealth(), 1);
+    @Test
+    public void testTotemSearing() throws HSException {
+        Minion target = board.data_.getCharacter(PlayerSide.CURRENT_PLAYER, 0);
+        Hero hero = board.data_.getCurrentPlayerHero();
+        HearthTreeNode ret = hero.useHeroAbility(PlayerSide.CURRENT_PLAYER, target, board, deck, null);
 
-		// Raid Leader is in effect
-		assertEquals(searingNode.data_.getCurrentPlayer().getMinions().get(0).getTotalAttack(), 2);
-		assertEquals(searingNode.data_.getCurrentPlayer().getMinions().get(1).getTotalAttack(), 7);
-		assertEquals(searingNode.data_.getCurrentPlayer().getMinions().get(2).getTotalAttack(), 2);
-	}
+        HearthTreeNode searingNode = ret.getChildren().get(0);
+        assertEquals(searingNode.data_.getCurrentPlayer().getNumMinions(), 3);
+        assertEquals(searingNode.data_.getCurrentPlayer().getMana(), 6);
+        assertTrue(searingNode.data_.getCurrentPlayer().getMinions().get(2) instanceof SearingTotem);
 
-	@Test
-	public void testTotemStoneclaw() throws HSException {
-		Minion target = board.data_.getCharacter(PlayerSide.CURRENT_PLAYER, 0);
-		Hero hero = board.data_.getCurrentPlayerHero();
-		HearthTreeNode ret = hero.useHeroAbility(PlayerSide.CURRENT_PLAYER, target, board, deck, null);
+        assertEquals(searingNode.data_.getCurrentPlayer().getMinions().get(0).getTotalHealth(), 2);
+        assertEquals(searingNode.data_.getCurrentPlayer().getMinions().get(1).getTotalHealth(), 7);
+        assertEquals(searingNode.data_.getCurrentPlayer().getMinions().get(2).getTotalHealth(), 1);
 
-		HearthTreeNode searingNode = ret.getChildren().get(1);
-		assertEquals(searingNode.data_.getCurrentPlayer().getNumMinions(), 3);
-		assertEquals(searingNode.data_.getCurrentPlayer().getMana(), 6);
-		assertTrue(searingNode.data_.getCurrentPlayer().getMinions().get(2) instanceof StoneclawTotem);
+        // Raid Leader is in effect
+        assertEquals(searingNode.data_.getCurrentPlayer().getMinions().get(0).getTotalAttack(), 2);
+        assertEquals(searingNode.data_.getCurrentPlayer().getMinions().get(1).getTotalAttack(), 7);
+        assertEquals(searingNode.data_.getCurrentPlayer().getMinions().get(2).getTotalAttack(), 2);
+    }
 
-		assertEquals(searingNode.data_.getCurrentPlayer().getMinions().get(0).getTotalHealth(), 2);
-		assertEquals(searingNode.data_.getCurrentPlayer().getMinions().get(1).getTotalHealth(), 7);
-		assertEquals(searingNode.data_.getCurrentPlayer().getMinions().get(2).getTotalHealth(), 2);
+    @Test
+    public void testTotemStoneclaw() throws HSException {
+        Minion target = board.data_.getCharacter(PlayerSide.CURRENT_PLAYER, 0);
+        Hero hero = board.data_.getCurrentPlayerHero();
+        HearthTreeNode ret = hero.useHeroAbility(PlayerSide.CURRENT_PLAYER, target, board, deck, null);
 
-		// Raid Leader is in effect
-		assertEquals(searingNode.data_.getCurrentPlayer().getMinions().get(0).getTotalAttack(), 2);
-		assertEquals(searingNode.data_.getCurrentPlayer().getMinions().get(1).getTotalAttack(), 7);
-		assertEquals(searingNode.data_.getCurrentPlayer().getMinions().get(2).getTotalAttack(), 1);
-	}
+        HearthTreeNode searingNode = ret.getChildren().get(1);
+        assertEquals(searingNode.data_.getCurrentPlayer().getNumMinions(), 3);
+        assertEquals(searingNode.data_.getCurrentPlayer().getMana(), 6);
+        assertTrue(searingNode.data_.getCurrentPlayer().getMinions().get(2) instanceof StoneclawTotem);
 
-	@Test
-	public void testTotemHealing() throws HSException {
-		Minion target = board.data_.getCharacter(PlayerSide.CURRENT_PLAYER, 0);
-		Hero hero = board.data_.getCurrentPlayerHero();
-		HearthTreeNode ret = hero.useHeroAbility(PlayerSide.CURRENT_PLAYER, target, board, deck, null);
+        assertEquals(searingNode.data_.getCurrentPlayer().getMinions().get(0).getTotalHealth(), 2);
+        assertEquals(searingNode.data_.getCurrentPlayer().getMinions().get(1).getTotalHealth(), 7);
+        assertEquals(searingNode.data_.getCurrentPlayer().getMinions().get(2).getTotalHealth(), 2);
 
-		HearthTreeNode healingNode = ret.getChildren().get(2);
-		assertEquals(healingNode.data_.getCurrentPlayer().getNumMinions(), 3);
-		assertEquals(healingNode.data_.getCurrentPlayer().getMana(), 6);
-		assertTrue(healingNode.data_.getCurrentPlayer().getMinions().get(2) instanceof HealingTotem);
+        // Raid Leader is in effect
+        assertEquals(searingNode.data_.getCurrentPlayer().getMinions().get(0).getTotalAttack(), 2);
+        assertEquals(searingNode.data_.getCurrentPlayer().getMinions().get(1).getTotalAttack(), 7);
+        assertEquals(searingNode.data_.getCurrentPlayer().getMinions().get(2).getTotalAttack(), 1);
+    }
 
-		assertEquals(healingNode.data_.getCurrentPlayer().getMinions().get(0).getTotalHealth(), 2);
-		assertEquals(healingNode.data_.getCurrentPlayer().getMinions().get(1).getTotalHealth(), 7);
-		assertEquals(healingNode.data_.getCurrentPlayer().getMinions().get(2).getTotalHealth(), 2);
+    @Test
+    public void testTotemHealing() throws HSException {
+        Minion target = board.data_.getCharacter(PlayerSide.CURRENT_PLAYER, 0);
+        Hero hero = board.data_.getCurrentPlayerHero();
+        HearthTreeNode ret = hero.useHeroAbility(PlayerSide.CURRENT_PLAYER, target, board, deck, null);
 
-		// Raid Leader is in effect
-		assertEquals(healingNode.data_.getCurrentPlayer().getMinions().get(0).getTotalAttack(), 2);
-		assertEquals(healingNode.data_.getCurrentPlayer().getMinions().get(1).getTotalAttack(), 7);
-		assertEquals(healingNode.data_.getCurrentPlayer().getMinions().get(2).getTotalAttack(), 1);
-	}
+        HearthTreeNode healingNode = ret.getChildren().get(2);
+        assertEquals(healingNode.data_.getCurrentPlayer().getNumMinions(), 3);
+        assertEquals(healingNode.data_.getCurrentPlayer().getMana(), 6);
+        assertTrue(healingNode.data_.getCurrentPlayer().getMinions().get(2) instanceof HealingTotem);
 
-	@Test
-	public void testTotemWrathOfAir() throws HSException {
-		Minion target = board.data_.getCharacter(PlayerSide.CURRENT_PLAYER, 0);
-		Hero hero = board.data_.getCurrentPlayerHero();
-		HearthTreeNode ret = hero.useHeroAbility(PlayerSide.CURRENT_PLAYER, target, board, deck, null);
+        assertEquals(healingNode.data_.getCurrentPlayer().getMinions().get(0).getTotalHealth(), 2);
+        assertEquals(healingNode.data_.getCurrentPlayer().getMinions().get(1).getTotalHealth(), 7);
+        assertEquals(healingNode.data_.getCurrentPlayer().getMinions().get(2).getTotalHealth(), 2);
 
-		HearthTreeNode wrathOfAirNode = ret.getChildren().get(3);
-		assertEquals(wrathOfAirNode.data_.getCurrentPlayer().getNumMinions(), 3);
-		assertEquals(wrathOfAirNode.data_.getCurrentPlayer().getMana(), 6);
-		assertTrue(wrathOfAirNode.data_.getCurrentPlayer().getMinions().get(2) instanceof WrathOfAirTotem);
+        // Raid Leader is in effect
+        assertEquals(healingNode.data_.getCurrentPlayer().getMinions().get(0).getTotalAttack(), 2);
+        assertEquals(healingNode.data_.getCurrentPlayer().getMinions().get(1).getTotalAttack(), 7);
+        assertEquals(healingNode.data_.getCurrentPlayer().getMinions().get(2).getTotalAttack(), 1);
+    }
 
-		assertEquals(wrathOfAirNode.data_.getCurrentPlayer().getMinions().get(0).getTotalHealth(), 2);
-		assertEquals(wrathOfAirNode.data_.getCurrentPlayer().getMinions().get(1).getTotalHealth(), 7);
-		assertEquals(wrathOfAirNode.data_.getCurrentPlayer().getMinions().get(2).getTotalHealth(), 2);
+    @Test
+    public void testTotemWrathOfAir() throws HSException {
+        Minion target = board.data_.getCharacter(PlayerSide.CURRENT_PLAYER, 0);
+        Hero hero = board.data_.getCurrentPlayerHero();
+        HearthTreeNode ret = hero.useHeroAbility(PlayerSide.CURRENT_PLAYER, target, board, deck, null);
 
-		// Raid Leader is in effect
-		assertEquals(wrathOfAirNode.data_.getCurrentPlayer().getMinions().get(0).getTotalAttack(), 2);
-		assertEquals(wrathOfAirNode.data_.getCurrentPlayer().getMinions().get(1).getTotalAttack(), 7);
-		assertEquals(wrathOfAirNode.data_.getCurrentPlayer().getMinions().get(2).getTotalAttack(), 1);
-	}
+        HearthTreeNode wrathOfAirNode = ret.getChildren().get(3);
+        assertEquals(wrathOfAirNode.data_.getCurrentPlayer().getNumMinions(), 3);
+        assertEquals(wrathOfAirNode.data_.getCurrentPlayer().getMana(), 6);
+        assertTrue(wrathOfAirNode.data_.getCurrentPlayer().getMinions().get(2) instanceof WrathOfAirTotem);
 
-	@Test
-	public void testTotemPosition() throws HSException {
-		BruteForceSearchAI ai0 = BruteForceSearchAI.buildStandardAI1();
-		List<HearthActionBoardPair> ab = ai0.playTurn(0, board.data_);
-		BoardModel resBoard = ab.get(ab.size() - 1).board;
+        assertEquals(wrathOfAirNode.data_.getCurrentPlayer().getMinions().get(0).getTotalHealth(), 2);
+        assertEquals(wrathOfAirNode.data_.getCurrentPlayer().getMinions().get(1).getTotalHealth(), 7);
+        assertEquals(wrathOfAirNode.data_.getCurrentPlayer().getMinions().get(2).getTotalHealth(), 2);
 
-		assertEquals(resBoard.getCurrentPlayer().getMana(), 6);
-		assertEquals(resBoard.getWaitingPlayer().getMana(), 8);
-		assertEquals(PlayerSide.CURRENT_PLAYER.getPlayer(resBoard).getNumMinions(), 3);
-		assertEquals(PlayerSide.WAITING_PLAYER.getPlayer(resBoard).getNumMinions(), 1);
+        // Raid Leader is in effect
+        assertEquals(wrathOfAirNode.data_.getCurrentPlayer().getMinions().get(0).getTotalAttack(), 2);
+        assertEquals(wrathOfAirNode.data_.getCurrentPlayer().getMinions().get(1).getTotalAttack(), 7);
+        assertEquals(wrathOfAirNode.data_.getCurrentPlayer().getMinions().get(2).getTotalAttack(), 1);
+    }
 
-		boolean isRightTotem = false;
-		isRightTotem = isRightTotem || resBoard.getCurrentPlayer().getMinions().getLast() instanceof HealingTotem;
-		isRightTotem = isRightTotem || resBoard.getCurrentPlayer().getMinions().getLast() instanceof SearingTotem;
-		isRightTotem = isRightTotem || resBoard.getCurrentPlayer().getMinions().getLast() instanceof StoneclawTotem;
-		isRightTotem = isRightTotem || resBoard.getCurrentPlayer().getMinions().getLast() instanceof WrathOfAirTotem;
-		assertTrue(isRightTotem);
+    @Test
+    public void testTotemPosition() throws HSException {
+        BruteForceSearchAI ai0 = BruteForceSearchAI.buildStandardAI1();
+        List<HearthActionBoardPair> ab = ai0.playTurn(0, board.data_);
+        BoardModel resBoard = ab.get(ab.size() - 1).board;
 
-		log.info("{}", PlayerSide.CURRENT_PLAYER.getPlayer(resBoard).getMinions().get(2).getClass());
-	}
+        assertEquals(resBoard.getCurrentPlayer().getMana(), 6);
+        assertEquals(resBoard.getWaitingPlayer().getMana(), 8);
+        assertEquals(PlayerSide.CURRENT_PLAYER.getPlayer(resBoard).getNumMinions(), 3);
+        assertEquals(PlayerSide.WAITING_PLAYER.getPlayer(resBoard).getNumMinions(), 1);
 
-	@Test
-	public void testHeropowerWithFullBoard() throws HSException {
-		Minion target = board.data_.getCharacter(PlayerSide.CURRENT_PLAYER, 0);
-		Hero shaman = board.data_.getCurrentPlayerHero();
-		board.data_.placeMinion(PlayerSide.CURRENT_PLAYER, new SilverHandRecruit());
-		board.data_.placeMinion(PlayerSide.CURRENT_PLAYER, new SilverHandRecruit());
-		board.data_.placeMinion(PlayerSide.CURRENT_PLAYER, new SilverHandRecruit());
-		board.data_.placeMinion(PlayerSide.CURRENT_PLAYER, new SilverHandRecruit());
-		board.data_.placeMinion(PlayerSide.CURRENT_PLAYER, new SilverHandRecruit());
-		assertEquals(PlayerSide.CURRENT_PLAYER.getPlayer(board).getNumMinions(), 7);
+        boolean isRightTotem = false;
+        isRightTotem = isRightTotem || resBoard.getCurrentPlayer().getMinions().getLast() instanceof HealingTotem;
+        isRightTotem = isRightTotem || resBoard.getCurrentPlayer().getMinions().getLast() instanceof SearingTotem;
+        isRightTotem = isRightTotem || resBoard.getCurrentPlayer().getMinions().getLast() instanceof StoneclawTotem;
+        isRightTotem = isRightTotem || resBoard.getCurrentPlayer().getMinions().getLast() instanceof WrathOfAirTotem;
+        assertTrue(isRightTotem);
 
-		HearthTreeNode ret = shaman.useHeroAbility(PlayerSide.CURRENT_PLAYER, target, board, deck, null);
-		assertNull(ret);
+        log.info("{}", PlayerSide.CURRENT_PLAYER.getPlayer(resBoard).getMinions().get(2).getClass());
+    }
 
-		assertEquals(PlayerSide.CURRENT_PLAYER.getPlayer(board).getNumMinions(), 7);
-		assertEquals(board.data_.getCurrentPlayer().getMana(), 8);
-	}
+    @Test
+    public void testHeropowerWithFullBoard() throws HSException {
+        Minion target = board.data_.getCharacter(PlayerSide.CURRENT_PLAYER, 0);
+        Hero shaman = board.data_.getCurrentPlayerHero();
+        board.data_.placeMinion(PlayerSide.CURRENT_PLAYER, new SilverHandRecruit());
+        board.data_.placeMinion(PlayerSide.CURRENT_PLAYER, new SilverHandRecruit());
+        board.data_.placeMinion(PlayerSide.CURRENT_PLAYER, new SilverHandRecruit());
+        board.data_.placeMinion(PlayerSide.CURRENT_PLAYER, new SilverHandRecruit());
+        board.data_.placeMinion(PlayerSide.CURRENT_PLAYER, new SilverHandRecruit());
+        assertEquals(PlayerSide.CURRENT_PLAYER.getPlayer(board).getNumMinions(), 7);
 
-	@Test
-	public void testHeropowerWithExistingTotem() throws HSException {
-		Minion target = board.data_.getCharacter(PlayerSide.CURRENT_PLAYER, 0);
-		Hero shaman = board.data_.getCurrentPlayerHero();
-		board.data_.placeMinion(PlayerSide.CURRENT_PLAYER, new SearingTotem());
-		assertEquals(PlayerSide.CURRENT_PLAYER.getPlayer(board).getNumMinions(), 3);
+        HearthTreeNode ret = shaman.useHeroAbility(PlayerSide.CURRENT_PLAYER, target, board, deck, null);
+        assertNull(ret);
 
-		HearthTreeNode ret = shaman.useHeroAbility(PlayerSide.CURRENT_PLAYER, target, board, deck, null);
-		assertNotEquals(board, ret);
-		assertTrue(ret instanceof RandomEffectNode);
-		assertEquals(ret.getChildren().size(), 3);
+        assertEquals(PlayerSide.CURRENT_PLAYER.getPlayer(board).getNumMinions(), 7);
+        assertEquals(board.data_.getCurrentPlayer().getMana(), 8);
+    }
 
-		HearthTreeNode childNode = ret.getChildren().get(0);
-		assertFalse(childNode.data_.getCurrentPlayer().getMinions().get(3) instanceof SearingTotem);
+    @Test
+    public void testHeropowerWithExistingTotem() throws HSException {
+        Minion target = board.data_.getCharacter(PlayerSide.CURRENT_PLAYER, 0);
+        Hero shaman = board.data_.getCurrentPlayerHero();
+        board.data_.placeMinion(PlayerSide.CURRENT_PLAYER, new SearingTotem());
+        assertEquals(PlayerSide.CURRENT_PLAYER.getPlayer(board).getNumMinions(), 3);
 
-		childNode = ret.getChildren().get(1);
-		assertFalse(childNode.data_.getCurrentPlayer().getMinions().get(3) instanceof SearingTotem);
+        HearthTreeNode ret = shaman.useHeroAbility(PlayerSide.CURRENT_PLAYER, target, board, deck, null);
+        assertNotEquals(board, ret);
+        assertTrue(ret instanceof RandomEffectNode);
+        assertEquals(ret.getChildren().size(), 3);
 
-		childNode = ret.getChildren().get(2);
-		assertFalse(childNode.data_.getCurrentPlayer().getMinions().get(3) instanceof SearingTotem);
+        HearthTreeNode childNode = ret.getChildren().get(0);
+        assertFalse(childNode.data_.getCurrentPlayer().getMinions().get(3) instanceof SearingTotem);
 
-		assertEquals(PlayerSide.CURRENT_PLAYER.getPlayer(board).getNumMinions(), 3);
-		assertEquals(board.data_.getCurrentPlayer().getMana(), 8);
-	}
+        childNode = ret.getChildren().get(1);
+        assertFalse(childNode.data_.getCurrentPlayer().getMinions().get(3) instanceof SearingTotem);
 
-	@Test
-	public void testHeropowerWithAllTotems() throws HSException {
-		Minion target = board.data_.getCharacter(PlayerSide.CURRENT_PLAYER, 0);
-		Hero shaman = board.data_.getCurrentPlayerHero();
-		board.data_.placeMinion(PlayerSide.CURRENT_PLAYER, new SearingTotem());
-		board.data_.placeMinion(PlayerSide.CURRENT_PLAYER, new StoneclawTotem());
-		board.data_.placeMinion(PlayerSide.CURRENT_PLAYER, new HealingTotem());
-		board.data_.placeMinion(PlayerSide.CURRENT_PLAYER, new WrathOfAirTotem());
-		assertEquals(PlayerSide.CURRENT_PLAYER.getPlayer(board).getNumMinions(), 6);
+        childNode = ret.getChildren().get(2);
+        assertFalse(childNode.data_.getCurrentPlayer().getMinions().get(3) instanceof SearingTotem);
 
-		HearthTreeNode ret = shaman.useHeroAbility(PlayerSide.CURRENT_PLAYER, target, board, deck, null);
-		assertNull(ret);
+        assertEquals(PlayerSide.CURRENT_PLAYER.getPlayer(board).getNumMinions(), 3);
+        assertEquals(board.data_.getCurrentPlayer().getMana(), 8);
+    }
 
-		assertEquals(PlayerSide.CURRENT_PLAYER.getPlayer(board).getNumMinions(), 6);
-		assertEquals(board.data_.getCurrentPlayer().getMana(), 8);
-	}
+    @Test
+    public void testHeropowerWithAllTotems() throws HSException {
+        Minion target = board.data_.getCharacter(PlayerSide.CURRENT_PLAYER, 0);
+        Hero shaman = board.data_.getCurrentPlayerHero();
+        board.data_.placeMinion(PlayerSide.CURRENT_PLAYER, new SearingTotem());
+        board.data_.placeMinion(PlayerSide.CURRENT_PLAYER, new StoneclawTotem());
+        board.data_.placeMinion(PlayerSide.CURRENT_PLAYER, new HealingTotem());
+        board.data_.placeMinion(PlayerSide.CURRENT_PLAYER, new WrathOfAirTotem());
+        assertEquals(PlayerSide.CURRENT_PLAYER.getPlayer(board).getNumMinions(), 6);
+
+        HearthTreeNode ret = shaman.useHeroAbility(PlayerSide.CURRENT_PLAYER, target, board, deck, null);
+        assertNull(ret);
+
+        assertEquals(PlayerSide.CURRENT_PLAYER.getPlayer(board).getNumMinions(), 6);
+        assertEquals(board.data_.getCurrentPlayer().getMana(), 8);
+    }
 }
